@@ -27,7 +27,6 @@ namespace Chummer
     {
         private static readonly Logger Log = LogManager.GetCurrentClassLogger();
         // Set session data:
-        private static readonly string SessionId = Guid.NewGuid().ToString();
         //private static string Hostname =  Dns.GetHostName();
         private static readonly string Version = System.Reflection.Assembly.GetExecutingAssembly().GetName().Version.ToString();
         private static readonly bool IsMilestone = System.Reflection.Assembly.GetExecutingAssembly().GetName().Version.Revision == 0;
@@ -37,13 +36,13 @@ namespace Chummer
         {
             if (telemetry == null)
                 throw new ArgumentNullException(nameof(telemetry));
-            //personal data should not be submitted
-            //telemetry.Context.User.Id = Environment.UserName;
             if (!telemetry.Context.GlobalProperties.ContainsKey("Milestone"))
+            {
                 telemetry.Context.GlobalProperties.Add("Milestone", IsMilestone.ToString(GlobalOptions.InvariantCultureInfo));
-            telemetry.Context.Session.Id = SessionId;
-            telemetry.Context.User.Id = SessionId;
-            telemetry.Context.Device.OperatingSystem = Environment.OSVersion.ToString();
+            }
+            else
+                telemetry.Context.GlobalProperties["Milestone"] = IsMilestone.ToString(GlobalOptions.InvariantCultureInfo);
+             telemetry.Context.Device.OperatingSystem = Environment.OSVersion.ToString();
             if (Properties.Settings.Default.UploadClientId != Guid.Empty)
             {
                 //sometimes, there are odd values stored in the UploadClientId.
@@ -55,6 +54,9 @@ namespace Chummer
                 telemetry.Context.Cloud.RoleInstance = Properties.Settings.Default.UploadClientId.ToString();
                 telemetry.Context.Device.Id = Properties.Settings.Default.UploadClientId.ToString();
             }
+            telemetry.Context.Session.Id = Properties.Settings.Default.UploadClientId.ToString(); 
+            telemetry.Context.User.Id = Properties.Settings.Default.UploadClientId.ToString(); 
+
             telemetry.Context.User.Id = telemetry.Context.Device.Id;
             telemetry.Context.Component.Version = Version;
             if (System.Diagnostics.Debugger.IsAttached)
