@@ -35,6 +35,10 @@ namespace ChummerHub.Client.UI
             {
                 UserRights = new List<SINnerUserRight>()
             };
+            string tooltip = "not checked: Character is only visible to users in the list above." + Environment.NewLine;
+            tooltip += "checked: Character is visible to users, who can see/own other characters that are members of the same group." + Environment.NewLine + Environment.NewLine;
+            tooltip += "This is ment to be used by GMs managing multiple groups and want to put NPCs into groups mixing them with player-characters.";                
+            clbVisibilityToUsers.SetToolTip(tooltip);
             clbVisibilityToUsers.ItemCheck += clbVisibilityToUsers_ItemCheck;
         }
 
